[chore] make wallet responsive

--- a/src/components/DashboardTeacherWallet/style.scss
+++ b/src/components/DashboardTeacherWallet/style.scss
@@ -5,9 +5,13 @@
   align-items: center !important;
   display: flex !important;
   margin-top: 20px !important;
-  font-size: 34px !important;
+  font-size: 30px !important;
   font-weight: 800 !important;
   color: rgb(99, 94, 94) !important;
+
+  @media(max-width: 330px){
+    font-size: 25px !important;
+  }
 }
 
 .wallet-credit-counter {
@@ -27,7 +31,7 @@
 }
 
 .wallet-withdraw {
-  font-size: 30px !important;
+  font-size: 3vmin !important;
   font-weight: 800 !important;
   color: rgb(99, 94, 94) !important;
   word-spacing: 2px !important;
@@ -37,12 +41,34 @@
     color: white !important;
     margin-left: 10px !important;
     margin-right: 10px !important;
-    font-size: 20px !important;
+    font-size: 2vmin !important;
   }
 
   &__textfield{
     margin-left: 10px !important;
     margin-right: 10px !important;
+    border: none !important;
+    outline: none !important;
+    border-bottom: 1px solid black !important;
+    width: 15vmin !important;
+
+    @media(max-width: 2500px){
+      font-size: 20px !important;
+    }
+    @media(max-width: 900px){
+      font-size: 18px !important;
+    }
+    @media(max-width: 600px){
+      font-size: 13px !important;
+    }
+
+    @media(max-width: 330px){
+      font-size: 10px !important;
+    }
+  }
+
+  &__textfield:focus{
+    border: none !important;
     outline: none !important;
     border-bottom: 1px solid black !important;
   }
