--- a/src/components/DashboardTeacherBankAccount/style.scss
+++ b/src/components/DashboardTeacherBankAccount/style.scss
@@ -12,40 +12,81 @@
   margin: auto;
   margin-top: 50px;
   margin-bottom: 50px !important;
-  width: 55vmin;
-  height: 300px;
   border-radius: 10px;
   box-shadow: rgb(42, 31, 75) 0px 2px 10px;
   background-color: rgb(16, 97, 100);
 }
 .CardNumber {
-  margin-top: 20px;
+  margin-top: 0.5vmin !important;
   font-weight: 800;
   font-size: large;
   color: rgb(6, 7, 58);
 }
 .CardName {
-  font-size: 20px !important;
+
   font-weight: 700 !important;
   color: rgb(207, 207, 207) !important;
-  margin-top: 30px !important;
+  margin-top: 1vmin !important;
   width: 220px !important;
-}
-
-.kenareham {
-  display: flex;
-  flex-direction: row;
 }
 
 .credit-card-input {
   padding: 5px;
-  width: 100px !important;
   height: 60px !important;
   background-color: transparent;
   border: none;
-  font-size: 40px !important;
   color: white;
-  margin-top: 50px !important;
+
+  @media (max-width: 2500px) {
+    font-size: 4vmin !important;
+    width: 10vmin !important;
+    margin-bottom: 2.5vmin !important;
+    margin-top: 50px !important;
+  }
+
+  @media (max-width: 1500px) {
+    font-size: 4vmin !important;
+    width: 10vmin !important;
+    margin-top: 50px !important;
+  }
+
+  @media (max-width: 1200px) {
+    font-size: 4vmin !important;
+    width: 10vmin !important;
+    margin-bottom: 2.5vmin !important;
+    margin-top: 50px !important;
+  }
+
+  @media (max-width: 900px) {
+    font-size: 4vmin !important;
+    width: 10vmin !important;
+    margin-bottom: 2.8vmin !important;
+    margin-top: 5vmin !important;
+  }
+
+  @media (max-width: 700px) {
+    font-size: 4vmin !important;
+    width: 10vmin !important;
+    margin-bottom: 0vmin !important;
+    margin-top: 3.5vmin !important;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 7vmin !important;
+    width: 15vmin !important;
+    margin-bottom: 3vmin !important;
+    margin-top: 6.5vmin !important;
+  }
+
+  @media (max-width: 460px) {
+    margin-bottom: 1vmin !important;
+    margin-top: 3.5vmin !important;
+  }
+
+  @media (max-width: 320px) {
+    margin-top: 0vmin !important;
+  }
+
 
   &:focus {
     outline: none !important;
@@ -61,9 +102,56 @@
   height: 40px !important;
   background-color: transparent;
   border: none;
-  font-size: 15px !important;
   color: white;
-  width: 230px !important;
+
+
+  @media (max-width: 2500px) {
+    font-size: 1.5vmin !important;
+    width: 30vmin !important;
+    letter-spacing: 3px !important;
+  }
+
+  @media (max-width: 1500px) {
+    font-size: 1.5vmin !important;
+    width: 30vmin !important;
+    letter-spacing: 3px !important;
+  }
+
+  @media (max-width: 1200px) {
+    font-size: 1.5vmin !important;
+    width: 30vmin !important;
+    letter-spacing: 3px !important;
+  }
+
+  @media (max-width: 900px) {
+    font-size: 1.5vmin !important;
+    width: 30vmin !important;
+    letter-spacing: 2.2px !important;
+  }
+
+  @media (max-width: 700px) {
+    font-size: 1.7vmin !important;
+    width: 32vmin !important;
+    letter-spacing: 2px !important;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 2.3vmin !important;
+    width: 43vmin !important;
+    letter-spacing: 2px !important;
+  }
+
+  @media (max-width: 460px) {
+    font-size: 2.3vmin !important;
+    width: 44vmin !important;
+    letter-spacing: 1.8px !important;
+  }
+
+  @media (max-width: 380px) {
+    font-size: 2.3vmin !important;
+    width: 43vmin !important;
+    letter-spacing: 1.5px !important;
+  }
 
   &:focus {
     outline: none !important;
@@ -76,7 +164,6 @@
   }
 }
 
-
-.credit-card-submit{
+.credit-card-submit {
   background-color: rgb(26, 128, 97) !important;
 }
