--- a/src/components/NotFoundPage/style.scss
+++ b/src/components/NotFoundPage/style.scss
@@ -51,7 +51,7 @@
   display: flex;
   padding-top: 25px;
   flex-direction: row;
-  margin: 30px;
+  margin: 0 30px;
   &__Media {
     width: 200px;
   }
@@ -70,4 +70,14 @@
       font-weight: 400;
     }
   }
+}
+
+.notfound-button{
+  background-color: rgb(61, 67, 126) !important;
+  font-weight: 700px !important;
+  font-size: 18px !important;
+  color: white !important;
+  padding: 12px !important;
+  width: 125px !important; 
+  height: 48px !important;
 }
