--- a/src/components/DashboardTeacherWallet/style.scss
+++ b/src/components/DashboardTeacherWallet/style.scss
@@ -51,6 +51,8 @@
     outline: none !important;
     border-bottom: 1px solid black !important;
     width: 15vmin !important;
+    text-align: center !important;
+    justify-content: center !important;
 
     @media(max-width: 2500px){
       font-size: 20px !important;
