--- a/src/components/TeacherPublicProfile/style.scss
+++ b/src/components/TeacherPublicProfile/style.scss
@@ -24,7 +24,7 @@
 
 .teacher-public-profile-about-me__text {
   text-align: center;
-  font-size: 24px !important;
+  font-size: 2.2vmin !important;
   font-weight: 700 !important;
   color: $c-black m !important;
 }
