--- a/src/components/TeacherPublicProfile/style.scss
+++ b/src/components/TeacherPublicProfile/style.scss
@@ -16,12 +16,11 @@
   border: 3px solid rgb(25, 114, 129);
   padding: 20px 40px;
   border-radius: 25px;
-  min-height: 200px !important;
 }
 
 .teacher-public-profile-about-me__text {
   text-align: center;
-  font-size: 24px !important;
+  font-size: 2.2vmin !important;
   font-weight: 700 !important;
   color: $c-black m !important;
 }
