[chore] minor changes in teacher dashboard

--- a/src/components/TeacherDashboard/style.scss
+++ b/src/components/TeacherDashboard/style.scss
@@ -25,9 +25,17 @@
 .dashboard-avatar-item {
   &:hover:not(:first-child) {
     background-color: rgba(127, 181, 240, 0.542) !important;
-    padding-bottom: 13px;
-    padding-top: 10px;
+    text-align: center !important;
+
   }
+  &:not(:first-child) {
+    align-items: center !important;
+    justify-content: center !important;
+    margin: auto !important;
+    display: flex !important;
+    padding: auto !important;
+  }
+
   &__info-name {
     font-size: 1.75vmin;
     margin: 0 auto 10px auto !important;
@@ -40,5 +48,9 @@
     font-size: 12px;
     margin: 0 auto 10px auto !important;
     font-weight: bold;
+    text-align: center !important;
+    justify-content: center !important;
+    align-items: center !important;
+    margin: auto !important;
   }
 }
