--- a/src/components/ClassDashboard/style.scss
+++ b/src/components/ClassDashboard/style.scss
@@ -150,14 +150,15 @@
 }
 
 .main-content {
-  width: calc(100% - 32px);
+  width: calc(100% - 32px - 250px - 16px);
   background-color: #fff;
   border-radius: 16px;
   margin: 16px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
   padding: 32px;
 
-  @media (max-width: 600px) {
+  @media (max-width: 768px) {
     padding: 16px;
+    width: calc(100% - 32px);
   }
 }
