--- a/src/components/Filters/style.scss
+++ b/src/components/Filters/style.scss
@@ -7,6 +7,14 @@
   padding: 16px;
   border-bottom: 1px solid rgb(221, 223, 227);
 
+  .class-card-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    width: 1024px;
+  }
+
   &:hover {
     box-shadow: 0px 4px 24px #eee;
     cursor: pointer;
@@ -105,6 +113,10 @@
   @media (max-width: 768px) {
     flex-direction: column;
 
+    .class-card-wrapper {
+      flex-direction: column;
+    }
+
     &__content {
       padding: 0;
     }
@@ -156,14 +168,16 @@
     background-color: #fff;
     display: flex;
     padding: 0;
-    width: 100%;
-    max-width: 1024px;
+    // width: 100%;
+    flex-grow: 1;
+    margin-left: 16px;
+    // max-width: 1024px;
     border: 1px solid #ddd;
     border-radius: 4px;
   }
 
   &__search-input {
-    padding: 16px;
+    padding: 12px;
     font-size: 16px;
     border: none;
     outline: none;
@@ -174,6 +188,7 @@
   }
 
   &__search-icon {
+    cursor: pointer;
     padding: 0 16px;
     display: flex;
     justify-content: center;
@@ -201,7 +216,7 @@
   }
 
   &__filter {
-    padding: 16px;
+    padding: 12px;
     background-color: #fff;
     font-size: 16px;
     border: 1px solid #ddd;
