--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -56,7 +56,7 @@ $color-highlight: lighten($c-gray-95, 7%);
 
   &__input,
   &__textarea {
-    background-color: #eee;
+    background-color: #f1f1f1;
     color: #333;
     padding: 12px 16px;
     font-size: 14px;
@@ -66,7 +66,7 @@ $color-highlight: lighten($c-gray-95, 7%);
     outline: none;
 
     &::placeholder {
-      color: #ccc;
+      color: #bbb;
     }
   }
 
