--- a/src/components/StudentDashboardClassesList/style.scss
+++ b/src/components/StudentDashboardClassesList/style.scss
@@ -18,8 +18,6 @@
   }
 }
 
-$base-color: orangered;
-$border-color: rgba($base-color, 0.6);
 
 // .css-xbovjc-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline
 .studentdash {
@@ -29,13 +27,13 @@ $border-color: rgba($base-color, 0.6);
   .MuiCardActions-root {
     display: flex;
     justify-content: center;
-    border-top: 2px solid #e05923;
+    border-top: 2px solid color(student-primary);
     height: 60px;
     a {
-      color: #ff4500;
+      color: color(student-primary);
       width: 100%;
     }
-    background: radial-gradient(#ffffff, rgba($base-color, 0.1));
+    background: radial-gradient(#ffffff, color(student-primary-light));
   }
   &__class-details {
     display: flex;
@@ -55,13 +53,13 @@ $border-color: rgba($base-color, 0.6);
     max-width: 350px;
     margin: 20px;
     text-align: center;
-    box-shadow: 0px 20px 20px -17px $border-color;
-    -webkit-box-shadow: 0px 20px 20px -17px $border-color;
-    -moz-box-shadow: 0px 20px 20px -17px $border-color;
+    box-shadow: 0px 20px 20px -17px color(student-primary);
+    -webkit-box-shadow: 0px 20px 20px -17px color(student-primary);
+    -moz-box-shadow: 0px 20px 20px -17px color(student-primary);
     &:hover {
-      -webkit-box-shadow: 0px 20px 35px -16px $border-color;
-      -moz-box-shadow: 0px 20px 35px -16px $border-color;
-      box-shadow: 0px 20px 35px -16px $border-color;
+      -webkit-box-shadow: 0px 20px 35px -16px color(student-primary);
+      -moz-box-shadow: 0px 20px 35px -16px color(student-primary);
+      box-shadow: 0px 20px 35px -16px color(student-primary);
       transform: translateY(-5px);
       transition: all 0.3s;
     }
