--- a/src/components/StudentProfile/style.scss
+++ b/src/components/StudentProfile/style.scss
@@ -14,8 +14,6 @@
     flex-direction: column;
   }
   margin: 0px 30px 30px;
-
-
 }
 
 .CenterB {
@@ -115,9 +113,31 @@
     margin: 20px;
   }
 }
-.marginBox{
+.marginBox {
   @media (min-width: 600px) {
     margin-left: 15px;
     margin-right: 8px;
+  }
+}
+
+.student-profile {
+  &__color-modal {
+    background-image: url(../../assets/images/color_papers.jpg);
+    opacity: 0.7;
+    color: whitesmoke;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    &__submit-btn {
+      display: flex;
+      text-align: center;
+      background: radial-gradient(#ffffff, color(student-primary-light));
+      width: 100%;
+      height: 50px;
+      justify-content: center;
+      border-top: 3px dotted color(student-primary);
+      a {
+        color: color(student-primary);
+        width: 100%;
+      }
+    }
   }
 }
