--- a/src/components/TeacherDashboard/style.scss
+++ b/src/components/TeacherDashboard/style.scss
@@ -41,6 +41,9 @@
     margin: 0 auto 10px auto !important;
     font-weight: bold;
     color: rgb(255, 255, 255);
+    @media(max-width:900px){
+      font-size: 2.5vmin !important ;
+    }
   }
 
   &__info-edit {
