--- a/src/components/ClassDiscounts/style.scss
+++ b/src/components/ClassDiscounts/style.scss
@@ -5,7 +5,7 @@
 }
 
 .discount-page-input__title {
-  width: 100%;
+  width: 50%;
 }
 
 .discount-page-input__title:focus {
@@ -13,7 +13,7 @@
 }
 
 .discount-page-input__end-date {
-  width: 95%;
+  width: 50%;
 }
 
 .discount-page-input__end-date:focus {
@@ -25,13 +25,50 @@ input.date-input {
 }
 
 .discount-page__second-row {
-  display: flex;
+  margin-top: 20px;
 }
 
 .discount-page-input__percentage {
-  width: 100%;
+  width: 50%;
 }
 
 .discount-page-input__percentage:focus {
   border-bottom: solid 2px black !important;
+}
+
+.discount-page__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.discount-page-title__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+  .discount-page__header {
+    display: block;
+  }
+
+  .discount-page-title__container {
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .discount-page-input__title {
+    width: 100%;
+  }
+
+  .discount-page-input__percentage {
+    width: 100%;
+  }
+
+  .discount-page-input__end-date {
+    width: 100%;
+  }
 }
