[feat] complete routing for discount system

--- a/src/components/Assignments/style.scss
+++ b/src/components/Assignments/style.scss
@@ -12,6 +12,7 @@
     color: #fff;
     margin: 0 16px 16px;
     transition: all 0.5s;
+    cursor: pointer;
     &:hover {
       border: 1px solid #30d5a0;
       background-color: #fff;
