--- a/src/components/ClassDiscounts/style.scss
+++ b/src/components/ClassDiscounts/style.scss
@@ -48,6 +48,25 @@ input.date-input {
   align-items: center;
 }
 
+.classDiscount__create-button {
+  box-shadow: 0 0 20px rgba(48, 213, 160, 0.5);
+  border: 1px solid #30d5a0;
+  border-radius: 16px;
+  padding: 12px 24px;
+  font-size: 16px;
+  font-weight: 700;
+  background-color: #30d5a0;
+  color: #fff;
+  margin: 0 16px 16px;
+  transition: all 0.5s;
+  cursor: pointer;
+  &:hover {
+    border: 1px solid #30d5a0;
+    background-color: #fff;
+    color: #000;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .discount-page__header {
     display: block;
