[feat]: connect search bar in header to filters page

--- a/src/components/Filters/style.scss
+++ b/src/components/Filters/style.scss
@@ -156,6 +156,10 @@
     border-bottom: 1px solid #eee;
     font-size: 24px;
   }
+  .show-more-classes-btn-wrapper {
+    margin-top: 16px;
+    text-align: center;
+  }
 }
 
 .filters {
