--- a/src/components/ClassDashboard/style.scss
+++ b/src/components/ClassDashboard/style.scss
@@ -72,9 +72,7 @@
   &__item {
     width: 100%;
     background-color: #fff;
-    padding: 16px 32px;
-    margin-bottom: 8px;
-    margin-top: 8px;
+    padding: 20px 32px;
     display: flex;
     justify-content: space-between;
     font-weight: 700;
@@ -135,9 +133,7 @@
   &__item {
     width: 100%;
     background-color: #fff;
-    padding: 16px 32px;
-    margin-bottom: 8px;
-    margin-top: 8px;
+    padding: 20px 32px;
     display: flex;
     justify-content: space-between;
     font-weight: 700;
@@ -160,5 +156,11 @@
   @media (max-width: 768px) {
     padding: 16px;
     width: calc(100% - 32px);
+  }
+}
+
+.active-class-drawer-item {
+  div {
+    background-color: #eee;
   }
 }
