[feat][fix] connect teacher wallet + resolve bugs about teacher profile

--- a/src/components/DashboardteacherClasses/style.scss
+++ b/src/components/DashboardteacherClasses/style.scss
@@ -61,4 +61,7 @@
   align-items: center;
   margin: auto;
   margin-top: 4vmin !important;
+  @media(max-width:900px){
+    font-size: 18px !important;
+  }
 }
