--- a/src/components/DashboardTeacherBankAccount/style.scss
+++ b/src/components/DashboardTeacherBankAccount/style.scss
@@ -14,7 +14,6 @@
   background-color: rgb(16, 97, 100);
 }
 .CardNumber {
-  margin-top: 0.5vmin !important;
   font-weight: 800;
   font-size: large;
   color: rgb(6, 7, 58);
@@ -35,53 +34,58 @@
   color: white;
 
   @media (max-width: 2500px) {
-    font-size: 4vmin !important;
-    width: 10vmin !important;
+    font-size: 32px !important;
+    width: 100px !important;
     margin-bottom: 2.5vmin !important;
     margin-top: 50px !important;
   }
 
   @media (max-width: 1500px) {
-    font-size: 4vmin !important;
-    width: 10vmin !important;
+    font-size: 32px !important;
+    width: 90px !important;
     margin-top: 50px !important;
   }
 
   @media (max-width: 1200px) {
-    font-size: 4vmin !important;
-    width: 10vmin !important;
-    margin-bottom: 2.5vmin !important;
+    font-size: 32px !important;
+    width: 90px !important;
+    margin-bottom: 20px !important;
     margin-top: 50px !important;
   }
 
   @media (max-width: 900px) {
-    font-size: 3.8vmin !important;
-    width: 10vmin !important;
-    margin-bottom: 2.8vmin !important;
-    margin-top: 5vmin !important;
+    font-size: 20px !important;
+    width: 65px !important;
+    margin-bottom: 16px !important;
+    margin-top: 20px !important;
   }
 
   @media (max-width: 700px) {
     font-size: 3.5vmin !important;
-    width: 10vmin !important;
-    margin-bottom: 0vmin !important;
-    margin-top: 3.5vmin !important;
+    width: 70px !important;
+    margin-bottom: 8px !important;
+    margin-top: 20px !important;
   }
 
   @media (max-width: 600px) {
-    font-size: 5.5vmin !important;
-    width: 15vmin !important;
-    margin-bottom: 3vmin !important;
-    margin-top: 6.5vmin !important;
+    font-size: 30px !important;
+    width: 85px !important;
+    margin-bottom: 30px !important;
+    margin-top: 40px !important;
   }
 
   @media (max-width: 460px) {
-    margin-bottom: 1vmin !important;
-    margin-top: 3.5vmin !important;
+    font-size: 22px !important;
+    width: 70px !important;
+    margin-bottom: 20px !important;
+    margin-top: 25px !important;
   }
 
-  @media (max-width: 320px) {
-    margin-top: 0vmin !important;
+  @media (max-width: 410px) {
+    font-size: 18px !important;
+    width: 60px !important;
+    margin-bottom: 8px !important;
+    margin-top: 15px !important;
   }
 
 
@@ -100,22 +104,22 @@
   background-color: transparent;
   border: none;
   color: white;
-
+  
 
   @media (max-width: 2500px) {
-    font-size: 1.5vmin !important;
+    font-size: 12px !important;
     width: 30vmin !important;
     letter-spacing: 3px !important;
   }
 
   @media (max-width: 1500px) {
-    font-size: 1.5vmin !important;
-    width: 30vmin !important;
+    font-size: 12px !important;
+    width: 250px !important;
     letter-spacing: 3px !important;
   }
 
   @media (max-width: 1200px) {
-    font-size: 1.5vmin !important;
+    font-size: 10px !important;
     width: 30vmin !important;
     letter-spacing: 3px !important;
   }
