--- a/src/components/TeacherPublicProfile/style.scss
+++ b/src/components/TeacherPublicProfile/style.scss
@@ -24,9 +24,12 @@
 
 .teacher-public-profile-about-me__text {
   text-align: center;
-  font-size: 2.2vmin !important;
+  font-size: 20px !important;
   font-weight: 700 !important;
   color: $c-black m !important;
+  @media(max-width:900px){
+    font-size: 15px !important;
+  }
 }
 
 .afterMyC-a {
