--- a/src/components/ClassDiscounts/style.scss
+++ b/src/components/ClassDiscounts/style.scss
@@ -59,6 +59,7 @@ input.date-input {
   color: #fff;
   margin: 0 16px 16px;
   transition: all 0.5s;
+  margin-top: 20px !important;
   cursor: pointer;
   &:hover {
     border: 1px solid #30d5a0;
