--- a/src/components/HowItWorks/style.scss
+++ b/src/components/HowItWorks/style.scss
@@ -33,13 +33,18 @@
 
 .why-card {
   padding: 16px;
-  width: 350px;
+  width: calc((100vw - 128px) / 3);
+  max-width: 350px;
   display: block;
   margin: 16px;
-  border-radius: 5%;
+  border-radius: 16px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 10px;
   &:hover {
     transform: scale(1.1);
+  }
+  @media (max-width: 600px) {
+    width: 350px;
+    max-width: calc(100vw - 32px);
   }
   &__img {
     padding: 16px;
@@ -50,7 +55,6 @@
     margin-right: auto;
   }
   &__title {
-    padding: ۸px;
     font-size: larger;
     color: indianred;
     text-align: center;
