--- a/src/components/CoursePage/style.scss
+++ b/src/components/CoursePage/style.scss
@@ -27,6 +27,7 @@
     font-weight: 700 !important;
     margin-top: 16px !important;
     margin-bottom: 8px !important;
+    margin-right: 18px !important;
   }
 
   &__rating {
