--- a/src/components/CourseComments/CourseCommentStudent/style.scss
+++ b/src/components/CourseComments/CourseCommentStudent/style.scss
@@ -15,6 +15,10 @@
     margin: 35px 16px !important;
     box-shadow:  -4px 5px 10px -5px rgba(0, 0, 0, 0.65) !important;
     z-index: 2;
+
+    @media(max-width:600px){
+      margin: 35px -5px !important;
+    }
   }
 
   &__text{
