--- a/src/components/StudentDashboardAssignments/style.scss
+++ b/src/components/StudentDashboardAssignments/style.scss
@@ -38,7 +38,7 @@
 .FoxP {
   margin-top: 20px;
   height: 60px;
-  width: fit-content;
+  // width: fit-content;
   @media (max-width: 800px) {
     margin-top: 30px;
   }
