[fix] teacher public profile courses and bank account submission

--- a/src/components/TeacherPublicProfile/style.scss
+++ b/src/components/TeacherPublicProfile/style.scss
@@ -53,9 +53,10 @@
   }
 
   .My-carousal-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    margin: auto !important;
 
     .swiper-slide {
       padding: 10px 0;
