--- a/src/components/CoursePage/style.scss
+++ b/src/components/CoursePage/style.scss
@@ -14,7 +14,7 @@
   padding: 32px 16px 16px;
   border-radius: 16px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
 
   &__categories {
@@ -67,6 +67,10 @@
     }
   }
 
+  &__goto-class {
+    margin: 0 16px;
+  }
+
   &__goto-times {
     background-color: rgb(37, 93, 173);
     color: $c-white;
@@ -91,6 +95,7 @@
     flex-shrink: 0;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+    margin-top: 64px;
 
     img {
       width: 100%;
@@ -135,10 +140,18 @@
       margin: 16px 0 0;
     }
 
+    &__goto-class {
+      margin: 16px 0 0;
+    }
+
     &__remain {
       text-align: center;
       margin-right: 0;
       margin-bottom: 32px;
+    }
+
+    &__img {
+      margin-top: 0;
     }
   }
 }
@@ -242,6 +255,7 @@
   background-color: $c-white;
   border-radius: 8px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+  outline: none;
   padding: 32px;
   position: absolute;
   top: 50%;
@@ -254,7 +268,11 @@
   &__title {
     font-size: 20px;
     margin-top: 16px;
-    margin-bottom: 32px;
+    margin-bottom: 16px;
+  }
+
+  &__description {
+    margin-bottom: 16px;
   }
 
   &__confirm {
