--- a/src/components/StudentCoins/style.scss
+++ b/src/components/StudentCoins/style.scss
@@ -1,10 +1,10 @@
 @import '/src/theme/main.scss';
 .mainCoins{
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     //justify-content: space-around;
     margin: 20px;
-    margin-top: 60px;
+    margin-top: 5px;
     @media (max-width: 800px) {
         flex-direction: column;
     }
@@ -57,14 +57,54 @@
     color:crimson;
     &__content{
        margin-top: 15px;
+       @media (max-width: 800px) {
+        font-size: 20px;
+        }
     }
     &__media{
         margin: 10px;
         width: 64px;
+        @media (max-width: 800px) {
+            width: 40px;
+        }
     }
 }
 .inArow{
     justify-content: center;
     display: flex;
     flex-direction: row;
+}
+.byMyself{
+    justify-content: center;
+    background-color: rgb(255, 223, 228);
+    box-shadow: rgba(241, 148, 184, 0.5) 0px 3px 10px;
+    color:crimson;
+    margin: auto;
+    margin-top: 85px;
+    margin-right: 100px;
+    width: 750px;
+    height: 600px;
+    padding: 20px;
+    text-align: center;
+    border-radius: 5px;
+    font-size: xx-large;
+    &__media{
+        width: 80%;
+    }
+    @media (max-width: 800px) {
+        margin: 10px;
+        margin-top: 80px;
+        width: 95%;
+        height: 400px;
+    }
+}
+.sooratiii{
+    //background-color: rgb(255, 240, 242);
+}
+.coinTree{
+    margin-top: 130px;
+    width: 600px;
+    @media (max-width: 800px) {
+        display: none;
+    }
 }
