--- a/src/components/StudentDashboardHeader/style.scss
+++ b/src/components/StudentDashboardHeader/style.scss
@@ -18,6 +18,9 @@
         font-weight: 700;
         margin-right: 18%;
         margin-top: 120px;
+        /*@media (max-width: 600px){
+            margin-top: 128px;
+        }*/
     }
 }
 .HeadSub{
@@ -48,6 +51,7 @@
         }
     @media (max-width: 600px) {
         width: 33%;
+        margin-top: 6px;
     }
     &__cont{
         text-align: center;
