--- a/src/components/StudentDashboardAssignments/style.scss
+++ b/src/components/StudentDashboardAssignments/style.scss
@@ -123,3 +123,8 @@ div.assignment-question > * > img {
     margin: auto 100px;
   }
 }
+.NoAssign{
+  font-weight: 700;
+  font-size: large;
+  color: color(student-primary);
+}
